attempting to fix white bottom on iphone 11

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,6 +17,7 @@ body {
   padding: 0px;
   background-image: linear-gradient($softViolet, $softBlue);
   font-family: "Kumbh Sans", sans-serif;
+  height: 100vh;
 }
 
 .weight {
